results/SVCOMP/4-shot/log-ExSymExeComplexMath-2024_03_18_20_03_25.txt
class Main {
  static int field;

  //@ ensures \result ==> field == 9 && test2(0.0);
  public static boolean f() {
    int x = 3;
    Main inst = new Main();
    field = 9;
    return inst.test2(0.0);
  }

  //@ requires Math.round(in) <= 16.0;
  //@ ensures \result ==> (\result ==> System.out.println("do2()")) && !\result ==> !System.out.println("do2()");
  public boolean test2(double in) {
    if (Math.round(in) > 16.0) {
      return false;
    } else
      System.out.println("do2()");
    return true;
  }

  //@ ensures (x == 0 && y != 0) ==> System.out.println(">>>>>>>>>>>> 1");
  //@ ensures (x != 0) ==> System.out.println(">>>>>>>>>>>> LOOK!");
  //@ ensures (x != 0 && x < 0) ==> System.out.println(">>>>>>>>>>>>>>> ???");
  //@ ensures (x != 0 && x > 0) ==> System.out.println(">>>>>>>>>>>>>>> !!!1");
  public void angleXY_(double x1, double y1) {
    double x = x1;
    double y = y1;
    if (x == 0 && y != 0) {
      System.out.println(">>>>>>>>>>>> 1");
    } else {
      System.out.println(">>>>>>>>>>>> LOOK!");
      if (x < 0) {
        System.out.println(">>>>>>>>>>>>>>> ???");
      } else if (x > 0) {
        System.out.println(">>>>>>>>>>>>>>> !!!1");
      }
    }
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeComplexMath.java:4: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result ==> field == 9 && test2(0.0);
                          ^
/home/max/Documents/JMLGPT/tmp/ExSymExeComplexMath.java:4: error: non-static method test2(double) cannot be referenced from a static context
  //@ ensures \result ==> field == 9 && test2(0.0);
                                        ^
/home/max/Documents/JMLGPT/tmp/ExSymExeComplexMath.java:13: error: incompatible types: void cannot be converted to boolean
  //@ ensures \result ==> (\result ==> System.out.println("do2()")) && !\result ==> !System.out.println("do2()");
                                                         ^
/home/max/Documents/JMLGPT/tmp/ExSymExeComplexMath.java:13: error: 'void' type not allowed here
  //@ ensures \result ==> (\result ==> System.out.println("do2()")) && !\result ==> !System.out.println("do2()");
                                                                                                       ^
/home/max/Documents/JMLGPT/tmp/ExSymExeComplexMath.java:22: error: cannot find symbol
  //@ ensures (x == 0 && y != 0) ==> System.out.println(">>>>>>>>>>>> 1");
               ^
  symbol:   variable x
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExeComplexMath.java:22: error: cannot find symbol
  //@ ensures (x == 0 && y != 0) ==> System.out.println(">>>>>>>>>>>> 1");
                         ^
  symbol:   variable y
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExeComplexMath.java:22: error: incompatible types: void cannot be converted to boolean
  //@ ensures (x == 0 && y != 0) ==> System.out.println(">>>>>>>>>>>> 1");
                                                       ^
/home/max/Documents/JMLGPT/tmp/ExSymExeComplexMath.java:23: error: cannot find symbol
  //@ ensures (x != 0) ==> System.out.println(">>>>>>>>>>>> LOOK!");
               ^
  symbol:   variable x
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExeComplexMath.java:23: error: incompatible types: void cannot be converted to boolean
  //@ ensures (x != 0) ==> System.out.println(">>>>>>>>>>>> LOOK!");
                                             ^
/home/max/Documents/JMLGPT/tmp/ExSymExeComplexMath.java:24: error: cannot find symbol
  //@ ensures (x != 0 && x < 0) ==> System.out.println(">>>>>>>>>>>>>>> ???");
               ^
  symbol:   variable x
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExeComplexMath.java:24: error: cannot find symbol
  //@ ensures (x != 0 && x < 0) ==> System.out.println(">>>>>>>>>>>>>>> ???");
                         ^
  symbol:   variable x
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExeComplexMath.java:24: error: incompatible types: void cannot be converted to boolean
  //@ ensures (x != 0 && x < 0) ==> System.out.println(">>>>>>>>>>>>>>> ???");
                                                      ^
/home/max/Documents/JMLGPT/tmp/ExSymExeComplexMath.java:25: error: cannot find symbol
  //@ ensures (x != 0 && x > 0) ==> System.out.println(">>>>>>>>>>>>>>> !!!1");
               ^
  symbol:   variable x
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExeComplexMath.java:25: error: cannot find symbol
  //@ ensures (x != 0 && x > 0) ==> System.out.println(">>>>>>>>>>>>>>> !!!1");
                         ^
  symbol:   variable x
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExeComplexMath.java:25: error: incompatible types: void cannot be converted to boolean
  //@ ensures (x != 0 && x > 0) ==> System.out.println(">>>>>>>>>>>>>>> !!!1");
                                                      ^
15 errors

